--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -117,14 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name=".NET Version" xml:space="preserve">
+    <value>.NET Framework 4.8.1</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>SpaceGameDev Software Developments</value>
   </data>
-  <data name="Copyright" xml:space="preserve">
-    <value>GPL-v3.0</value>
-  </data>
   <data name="Description" xml:space="preserve">
     <value>A simple computer cleaning tool for Windows.</value>
+  </data>
+  <data name="License" xml:space="preserve">
+    <value>GPL-v3.0</value>
   </data>
   <data name="Product" xml:space="preserve">
     <value>GoCleanYourComputer</value>
