--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -138,4 +138,7 @@
   <data name="Title" xml:space="preserve">
     <value>GoCleanYourComputer</value>
   </data>
+  <data name="Copyright" xml:space="preserve">
+    <value>Copyright © 2023 Jesse Hodgson</value>
+  </data>
 </root>
